--- a/source/webapp/templates/partial/task_form.html
+++ b/source/webapp/templates/partial/task_form.html
@@ -9,6 +9,5 @@
     {% endfor %}
     <p>{{ field }}</p>
 {% endfor %}
-<p><input class="btn btn-primary" type="submit" value="{{ button_text }}">
+<input class="btn btn-primary" type="submit" value="{{ button_text }}">
 <a class="btn btn-secondary" href="{% url 'index' %}" role="button">Home</a>
-    </p>
