--- a/source/webapp/templates/partial/task_form.html
+++ b/source/webapp/templates/partial/task_form.html
@@ -1,4 +1,4 @@
-{% csrf_token %}
+{% load widget_tweaks %}{% csrf_token %}
 {% for error in form.non_field_errors %}
     <p class="form-error">{{ error }}</p>
 {% endfor %}
@@ -7,7 +7,7 @@
     {% for error in field.errors %}
         <p class="form-error">{{ error }}</p>
     {% endfor %}
-    <p>{{ field }}</p>
+    <p>{{ field|add_class:'form-control' }}</p>
 {% endfor %}
 <input class="btn btn-primary" type="submit" value="{{ button_text }}">
 <a class="btn btn-secondary" href="{% url 'index' %}" role="button">Home</a>
