--- a/source/webapp/templates/delete_view.html
+++ b/source/webapp/templates/delete_view.html
@@ -1,9 +1,11 @@
 {% extends 'base.html' %}
 {% block title %}Delete task{% endblock %}
 {% block content %}
-<form method="post">{% csrf_token %}
-    <h2 class="my-3">Are you sure you want to delete this task? (Task #{{ task.pk }})</h2>
-    <input class="btn btn-primary" type="submit" value="Yes">
-    <a class="btn btn-secondary" href="{% url 'index' %}">No</a>
-</form>
+<div class="text-center">
+    <form method="post">{% csrf_token %}
+        <h2 class="my-3">Are you sure you want to delete this task? (Task #{{ task.pk }})</h2>
+        <input class="btn btn-danger" type="submit" value="Yes">
+        <a class="btn btn-primary" href="{% url 'index' %}">No</a>
+    </form>
+</div>
 {% endblock %}
