Created 'admin_delete.html', admin_delete_view, added path for it in urls.py and link in index.html

--- a/source/webapp/templates/index.html
+++ b/source/webapp/templates/index.html
@@ -2,8 +2,9 @@
 {% block title %}To-Do List{% endblock %}
 {% block nav %}
 <nav class="navbar navbar-dark bg-primary mb-5">
-    <a class="navbar-brand font-weight-bold" href="{% url 'index' %}">To-Do LIST</a>
-    <a class="navbar-brand font-weight-bold" href="{% url 'task_create' %}">ADD NEW</a>
+    <a class="navbar-brand font-weight-bold" href="{% url 'index' %}">To-Do List</a>
+    <a class="navbar-brand font-weight-bold" href="{% url 'task_create' %}">Add task</a>
+    <a class="navbar-brand font-weight-bold" href="{% url 'admin_delete' %}">Admin delete</a>
 </nav>
 {% endblock %}
 
