Added initial status choice in forms.py, added 'Cancel' button in admin_delete.html

--- a/source/webapp/templates/admin_delete.html
+++ b/source/webapp/templates/admin_delete.html
@@ -10,6 +10,7 @@
         </div>
     {% endfor %}
     <input class="btn btn-danger" type="submit" value="Delete">
+    <a class="btn btn-primary" href="{% url 'index' %}" role="button">Cancel</a>
     </form>
     </div>
 {% endblock %}
