--- a/source/webapp/templates/index.html
+++ b/source/webapp/templates/index.html
@@ -4,7 +4,7 @@
 <nav class="navbar navbar-dark bg-primary mb-5">
     <a class="navbar-brand font-weight-bold" href="{% url 'index' %}">To-Do List</a>
     <a class="navbar-brand font-weight-bold" href="{% url 'task_create' %}">Add task</a>
-    <a class="navbar-brand font-weight-bold" href="{% url 'admin_delete' %}">Admin delete</a>
+    <a class="navbar-brand font-weight-bold" href="{% url 'admin_delete' %}">Delete</a>
 </nav>
 {% endblock %}
 
